--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <span id="welcome">
-<h3>Welcome to ACME's predictive market intelligence!</h3>
+<h3>Welcome to ACME's Predictive Market Intelligence!</h3>
 </span>
 
 Account name: <input type="text" id="name">
